fix(from): Align from icon correctly

--- a/static/components/button-dropdown.less
+++ b/static/components/button-dropdown.less
@@ -49,6 +49,7 @@
     .btn();
     cursor: default;
     color: @btn-default-text-color;
+    line-height: 2em;
   }
   .primary-item {
     border-radius: @border-radius-base 0 0 @border-radius-base;
